resolve minor warnings